...
                navigateToDetail = navigateToDetail
            )
        }else{
            EmptyList(
                Warning = stringResource(R.string.empty_data),
                modifier = Modifier
                    .testTag("emptyList")
            )
        }
    }
}

@OptIn(ExperimentalFoundationApi::class)
...
            end = 16.dp,
            bottom = 16.dp,
            top = contentPaddingTop
        ),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier
            .testTag("lazy_list")
    ){
        items(listNews, key = {it.id}){ item ->
            FootballItem(
                id = item.id,
                name = item.name,
                image = item.image,
...
