...
            onClick = navigateBack,
            modifier = Modifier
                .padding(start = 16.dp, top = 8.dp)
                .align(Alignment.TopStart)
                .clip(CircleShape)
                .size(40.dp)
                .testTag("back_home")
                .background(Color.White)
        ) {
            Icon(
                imageVector = Icons.Default.ArrowBack,
                contentDescription = stringResource(R.string.back),
            )
...
        }, modifier = Modifier
            .padding(end = 16.dp, top = 8.dp)
            .align(Alignment.TopEnd)
            .clip(CircleShape)
            .size(40.dp)
            .background(Color.White)
            .testTag("bookmark_detail_button")
        ) {
            Icon(
                painter = if (!isBookmark) painterResource(R.drawable.baseline_favorite_24) else
                    painterResource(R.drawable.favorite_border_24),
                contentDescription = if (!isBookmark) stringResource(R.string.add_bookmark) else stringResource(
                    R.string.delete_bookmark),
...
