...
            contentDescription = null,
            tint = if (!isBookmark) Color.Black else Color.Red,
            modifier = Modifier
                .align(Alignment.TopEnd)
                .padding(8.dp)
                .size(24.dp)
                .testTag("item_bookmark_button")
                .clickable { onBookmarkIconClicked(id, !isBookmark) }
        )
    }
}

